--- a/servicos.html
+++ b/servicos.html
@@ -237,7 +237,7 @@
                 <div class="service-card bg-gray-100 p-8 rounded-lg shadow-lg text-center">
                     <h3 class="text-xl lg:text-2xl font-semibold mb-3">Upgrade de Hardware</h3>
                     <p class="text-lg lg:text-xl mb-4">Troca ou adição de RAM, SSD, placa de vídeo e outros componentes para melhorar o desempenho.</p>
-                    <a href="https://wa.me/5598992151120?text=Quero agendar upgrade de hardware!" target="_blank" class="bg-red-600 text-white px-6 py-3 rounded-full font-bold hover:bg-red-700 transition" aria-label="Agendar upgrade de hardware via WhatsApp">.Raw
+                    <a href="https://wa.me/5598992151120?text=Quero agendar upgrade de hardware!" target="_blank" class="bg-red-600 text-white px-6 py-3 rounded-full font-bold hover:bg-red-700 transition" aria-label="Agendar upgrade de hardware via WhatsApp">Agendar
                     </a>
                 </div>
                 <!-- Serviço 3: Limpeza Interna -->
